History tracking with interceptors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.cache=false
+
+#h2 
+spring.datasource.url = jdbc:h2:mem:springsecurity
+spring.h2.console.enabled=true
+spring.h2.console.path=/console/
+
+#interceptor
+
+spring.jpa.properties.hibernate.ejb.interceptor=com.dilipmaharjan.learnjava.hibernateinterceptor.interceptor.HibernateInterceptor
