--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,17 @@ spring.thymeleaf.cache=false
 spring.datasource.url = jdbc:h2:mem:springsecurity
 spring.h2.console.enabled=true
 spring.h2.console.path=/console/
+
+#kafka producer
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.admin.properties.bootstrap.servers=localhost:9092
+spring.kafka.template.default-topic=events
+
+#Kafka consumer
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=events-listener-grp
+
