--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
             <artifactId>vertx-config</artifactId>
             <version>3.9.4</version>
         </dependency>
-
+        <!--vertx -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
